--- a/css/style.css
+++ b/css/style.css
@@ -77,10 +77,21 @@ body.content #sidebar ul {
 body.content #sidebar ul ul {
   margin-left: 20px;
 }
-h2 #contact script a code {
+.mail a code {
   font-family:Monaco, Andale Mono, Courier New, monospace;
-  font-size:12px;
-  line-height: 16px;
+  font-size: inherit;
+  font-weight:inherit;
+  line-height:inherit;
   white-space: pre;
   overflow-x: auto;
+  background-color:#fff;
+  color:#0069d6;
+  text-decoration:none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+.mail a:hover code {
+    color:#00438a;
+    text-decoration:underline;
 }
