cool font for cool people

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@
     margin-bottom:9px;
 }
 
+body{
+    font-family: Vollkorn, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
 /*****************************************************************************/
 /*
 /* Home
