add posts page, incl in nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,13 @@
     <p class=author-bio>{{ site.author_bio }}</p>
 
     <div class=nav>
+        <a href="/posts"><b>blog</b></a><br />
         <a href="/publications"><b>pubs</b></a><br />
         <a href="/cscorley_cv.pdf"><b>vita</b></a>
+    </div>
+
+    <br /><br />
+    <div class=disclaimer>
+        <a href="/disclaimer">disclaimer</a>
     </div>
 </div>
