--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,11 @@
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>{{ page.title }}</title>
+        {% if page.title %}
+        <title>{{ page.title }} - {{ site.name }}</title>
+        {% else %}
+        <title>{{ site.name }}</title>
+        {% endif %}
 
         <script src=http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML.js type=text/javascript></script>
         <script>
