--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,10 @@
     <p class=author-bio>{{ site.author_bio }}</p>
 
     <div class=nav>
+        <a href=/><b>about</b></a><br />
         <a href="/posts"><b>blog</b></a><br />
         <a href="/publications"><b>pubs</b></a><br />
-        <a href="/cscorley_cv.pdf"><b>vita</b></a>
+        <a href="/cscorley_cv.pdf"><b>cv.pdf</b></a>
     </div>
 
     <br /><br />
