--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
     {% endif %}
     {% include post-meta.html %}
     <h1 class=title-large>{{ page.title }}</h1>
-    <div class=content>
+    <div class="home">
         {{ content }}
     </div>
 </div>
