Switch to latest FontAwesome. thank u MaxCDN-based gods

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div class=author-info>
     <h1 class=author-name><a href=/>{{ site.name }}</a></h1>
     <div class=nav>
-        <a href="{{ site.github_url }}"><i class=icon-github-alt></i></a>
-        <a href="{{ site.twitter_url }}"><i class=icon-twitter></i></a>
-        <a href="{{ site.email }}"><i class=icon-envelope></i></a>
+        <a href="{{ site.github_url }}"><i class="fa fa-github"></i></a>
+        <a href="{{ site.twitter_url }}"><i class="fa fa-twitter"></i></a>
+        <a href="{{ site.email }}"><i class="fa fa-envelope"></i></a>
     </div>
     <p class=author-bio>{{ site.author_bio }}</p>
 
