--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
         <link rel=stylesheet type=text/css href=/css/pure-min.css>
         <link rel=stylesheet type=text/css href=/css/github.css>
         <link rel=stylesheet type=text/css href=/css/styles.css>
-        <link rel=stylesheet type=text/css href=/css/font-awesome/css/font-awesome.min.css>
+        <link rel=stylesheet type=text/css href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
