--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
         <a href=/><b>about</b></a><br />
         <a href="/posts"><b>blog</b></a><br />
         <a href="/publications"><b>pubs</b></a><br />
-        <a href="/cscorley_cv.pdf"><b>cv.pdf</b></a>
+        <a href="/cscorley_cv.pdf"><b>cv.pdf</b></a><br />
+        <a href="/cscorley_resume.pdf"><b>resume.pdf</b></a><br />
     </div>
 
     <br /><br />
