--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,71 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        {% if page.title %}
-        <title>{{ page.title }} - {{ site.name }}</title>
-        {% else %}
-        <title>{{ site.name }}</title>
-        {% endif %}
+  {% include head.html %}
 
-        <script src=http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML.js type=text/javascript></script>
-        <script>
-            MathJax.Hub.Config({
-              "HTML-CSS": {
-                linebreaks: {
-                    automatic: true,
-                    width: "70% container"
-                },
-                styles: {
-                    ".MathJax .math": {
-                        "border": "1px solid #ccc",
-                        "margin": "0.1em 0",
-                        "padding": "0.3em",
-                        "vertical-align": "middle"
-                    },
-                    ".MathJax_Display .math": {
-                        "border": "none",
-                        "padding": "0",
-                    }
-                },
-                scale: 90
-              }
-            });
-        </script>
+  <body>
 
-        <link href='http://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    {% include header.html %}
 
-        <link rel=stylesheet type=text/css href=/css/pure-min.css>
-        <link rel=stylesheet type=text/css href=/css/github.css>
-        <link rel=stylesheet type=text/css href=/css/styles.css>
-        <link rel=stylesheet type=text/css href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    {% include footer.html %}
 
-  ga('create', 'UA-38587517-3', 'christop.club');
-  ga('send', 'pageview');
+  </body>
 
-</script>
-
-    </head>
-    <body>
-        <div class="container pure-g-r">
-            <div class=pure-u-1-4>
-                {% include header.html %}
-            </div>
-            <div class=pure-u-3-4>
-                <div class=right-column>
-                    {{ content }}
-                </div>
-            </div>
-        </div>
-
-    </body>
 </html>
