--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,14 @@
 ---
 layout: default
 ---
-<div class=page>
-    <h1 class=title-large>{{ page.title }}</h1>
-    <div class="home">
-        {{ content | markdownify }}
-    </div>
+<div class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
+
+  <article class="post-content">
+    {{ content }}
+  </article>
+
 </div>
