--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
  * Syntax highlighting styles
  */
 .highlight {
-    background: #fff;
+    background: $code-accent;
     @extend %vertical-rhythm;
 
     .c     { color: #998; font-style: italic } // Comment
