--- a/css/main.scss
+++ b/css/main.scss
@@ -4,20 +4,19 @@
 @charset "utf-8";
 
 
-
-// Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: "PT Serif",Georgia,Times,"Times New Roman",serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:       #000;
+$background-color: #fff;
+$brand-color:      #900;
+$code-accent:      #fee;
 
-$grey-color:       #828282;
+$grey-color:       #5c5f68;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
