resume upgrade pass 1

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,7 @@
           <a class="page-link" href="/publications">publications</a>
           <a class="page-link" href="/posts">blog</a>
           <a class="page-link" href="/cscorley_cv.pdf">cv.pdf</a>
+          <a class="page-link" href="/cscorley_resume.pdf">resume.pdf</a>
       </div>
     </nav>
 
